--- a/templates/gitea-app.ini.j2
+++ b/templates/gitea-app.ini.j2
@@ -13,8 +13,8 @@ APP_DATA_PATH = /var/lib/gitea/data
 DISABLE_SSH = false
 SSH_PORT = 22
 LFS_START_SERVER = true
-{% if gitea_LFS_JWT_SECRET is defined %}
-LFS_JWT_SECRET = {{ gitea_LFS_JWT_SECRET }}
+{% if gitea_lfs_jwt_secret is defined %}
+LFS_JWT_SECRET = {{ gitea_lfs_jwt_secret }}
 {% endif %}
 OFFLINE_MODE = false
 
@@ -73,12 +73,12 @@ DEFAULT_TRUST_MODEL = committer
 
 [security]
 INSTALL_LOCK = true
-{% if gitea_INTERNAL_TOKEN is defined %}
-INTERNAL_TOKEN = {{ gitea_INTERNAL_TOKEN }}
+{% if gitea_internal_token is defined %}
+INTERNAL_TOKEN = {{ gitea_internal_token }}
 {% endif %}
 PASSWORD_HASH_ALGO = pbkdf2
 
 [oauth2]
-{% if gitea_JWT_SECRET is defined %}
-JWT_SECRET = {{ gitea_JWT_SECRET }}
+{% if gitea_jwt_secret is defined %}
+JWT_SECRET = {{ gitea_jwt_secret }}
 {% endif %}
