fix setting database password in app.ini

--- a/templates/gitea-app.ini.j2
+++ b/templates/gitea-app.ini.j2
@@ -22,7 +22,7 @@ DB_TYPE = postgres
 HOST = 127.0.0.1:5432
 NAME = {{ gitea_db_name }}
 USER = {{ gitea_db_user }}
-PASSWD = {{ gitea_db_password }}
+PASSWD = `{{ gitea_db_password }}`
 SCHEMA = 
 SSL_MODE = disable
 PATH = /var/lib/gitea/data/gitea.db
