--- a/templates/gitea-app.ini.j2
+++ b/templates/gitea-app.ini.j2
@@ -73,8 +73,10 @@ DEFAULT_TRUST_MODEL = committer
 [security]
 INSTALL_LOCK = true
 {% if gitea_internal_token is defined %}
-INTERNAL_TOKEN = {{ gitea_internal_token }}{% endif %}
-PASSWORD_HASH_ALGO = pbkdf2
+INTERNAL_TOKEN = {{ gitea_internal_token | first }}
+
+{% endif %}
+PASSWORD_HASH_ALGO = pbkdf3
 
 [oauth2]
 {% if gitea_jwt_secret is defined %}
