--- a/templates/gitea-app.ini.j2
+++ b/templates/gitea-app.ini.j2
@@ -14,7 +14,8 @@ DISABLE_SSH = false
 SSH_PORT = 22
 LFS_START_SERVER = true
 {% if gitea_lfs_jwt_secret is defined %}
-LFS_JWT_SECRET = {{ gitea_lfs_jwt_secret }}{% endif %}
+LFS_JWT_SECRET = {{ gitea_lfs_jwt_secret[0] }}
+{% endif %}
 OFFLINE_MODE = false
 
 [database]
@@ -74,10 +75,10 @@ DEFAULT_TRUST_MODEL = committer
 INSTALL_LOCK = true
 {% if gitea_internal_token is defined %}
 INTERNAL_TOKEN = {{ gitea_internal_token | first }}
-
 {% endif %}
-PASSWORD_HASH_ALGO = pbkdf3
+PASSWORD_HASH_ALGO = pbkdf2
 
 [oauth2]
 {% if gitea_jwt_secret is defined %}
-JWT_SECRET = {{ gitea_jwt_secret }}{% endif %}
+JWT_SECRET = {{ gitea_jwt_secret[0] }}
+{% endif %}
